# deloitte-job-scraper

./: .gitignore  LICENSE  README.md  deloitte_jobs.csv  pyproject.toml
src/deloitte_job_scraper/: job_links.py  main.py
src/deloitte_job_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
