[project]
name = "deloitte-job-scraper"
version = "0.1.0"
description = "A Python project which scrapes all the job listings from Deloitte USI Career page."
authors = [{ name="Anirudh Meshram", email="meshramanirudh.work@gmail.com" }]
dependencies = [
  "requests",
  "beautifulsoup4",
  "lxml",
  "pandas"
]

[project.scripts]
deloitte-job-scraper = "deloitte_job_scraper.main:main"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
